# copyosity

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  latest.json  lefthook.yml  package-lock.json  package.json  stylelint.config.mjs  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml  windows-build.yml
.husky/: pre-commit
docs/: AUTOUPDATE.md  NOTARIZATION.md  TESTING.md  index.html
docs/architecture/: macos-paste-pipeline.md  macos-tray-menu.md  palette-agent-chat.md  sync-api.md  ui-icons.md
docs/plans/: 01-macos-intel-build-improvements.md  02-hig-audit.md  03-new-features-and-improvements.md  03-overlay-content-and-tag-filters.md  04-macos-intel-pre-release.md  04-voice-hud-accessibility-full-cycle.md  05-macos-intel-pre-release.md  05-overlay-content-and-tag-filters.md  06-macos-intel-pre-release.md  audit-hig.md  build-macos-intel.md  feature-appearance-theme.md  feature-overlay-content-tag-filters.md  feature-quick-look-preview.md  feature-voice-hud-accessibility.md  features-backlog.md
docs/product/: ollama-onboarding.md
scripts/: build-macos.sh  check-rust-env.sh  env-rust.sh  finalize-0.6.2.sh  finalize-0.6.3.sh  finalize-0.6.4.sh  finalize-0.6.5.sh  finalize-0.7.0.sh  finalize-0.8.0.sh  finalize-0.8.1.sh  finalize-0.8.2.sh  finalize-0.9.0.sh  finalize-0.9.1.sh  finalize-0.9.2.sh  finalize-0.9.3.sh  finalize-0.9.4.sh  finalize-0.9.5.sh  finalize-0.9.6.sh  finalize-0.9.7.sh  finalize-0.9.8.sh  finalize.sh  lint-staged-rust.sh  macos-target.sh  make-latest-json.sh  pre-commit-rust.sh  pre-push-lint-fix.sh  publish-mirrors.sh  release-macos.sh  release.sh  run-rust.sh  verify-fullscreen-auxiliary.sh  verify-fullscreen-auxiliary.swift  verify-tray-dev.sh  verify-tray-startup.sh  with-npm.sh  with-tauri.sh
scripts/lib/: tray-click-check.sh
src/: app.html
src-tauri/: Cargo.toml  Info.plist  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  palette.json  settings.json  voice_overlay.json
src-tauri/examples/: asr_demo.rs
src-tauri/icons/: icon.icns
src-tauri/permissions/: main-commands.toml  palette-commands.toml  settings-commands.toml  voice-overlay-commands.toml
src-tauri/src/: activation_macos.rs  agent.rs  app_exclusion.rs  clipboard_monitor.rs  clipboard_write.rs  commands.rs  db.rs  hub.rs  image_format.rs  lib.rs  local_asr.rs  macos_app.rs  macos_window.rs  mactools.rs  main.rs  ocr.rs  ollama.rs  overlay_dismiss.rs  palette_window.rs  quick_menu.rs  quick_menu_position.rs  screen.rs  tagging.rs  transcription.rs  tray_macos.rs  whisper.rs  win_platform.rs
src-tauri/src/clipboard_macos/: accessibility.rs  mod.rs  paste.rs
src/lib/: api.ts  card-tag-label.test.ts  card-tag-label.ts  collection-tabs.test.ts  collection-tabs.ts  confirm.ts  destructive-actions.test.ts  destructive-actions.ts  entry-ocr-payload.test.ts  entry-tagged-payload.test.ts  exclusion-label.test.ts  exclusion-label.ts  image-meta.test.ts  image-meta.ts  input-modality.test.ts  input-modality.ts  motion.ts  overlay-browse-sync.test.ts  overlay-browse-sync.ts  overlay-card-context-menu.test.ts  overlay-card-context-menu.ts  overlay-content-kind-session.test.ts  overlay-content-kind-session.ts  overlay-display-query.test.ts  overlay-display-query.ts  overlay-entries-display.test.ts  overlay-entries-logic.test.ts  overlay-entries-logic.ts  overlay-entries.svelte.ts  overlay-filters.test.ts  overlay-filters.ts  overlay-grid-scroll.test.ts  overlay-grid-scroll.ts  overlay-layout.test.ts  overlay-layout.ts  overlay-motion.test.ts  overlay-motion.ts  overlay-pagination.test.ts  overlay-pagination.ts  overlay-resize.ts  (+21 more)
src/lib/agent/: hub.test.ts  hub.ts  index.ts
src/lib/components/: ActionMenu.svelte  CardTypeBadge.svelte  ChevronDown.svelte  ClipboardCard.svelte  CollectionTabs.svelte  ConfirmDialog.svelte  ContentKindSegment.svelte  FieldStatusFooter.svelte  HotkeySettingsSection.svelte  KeyboardHints.svelte  QuickLookPanel.svelte  SearchBar.svelte  SectionIcon.svelte  SegmentControl.svelte  ShortcutField.svelte  ShortcutModifierHint.svelte  SnippetsEditor.svelte  TagFilterBar.svelte
src/lib/i18n/: dict.ts  index.ts
src/lib/styles/: button-interaction.css  focus-rings.css  form-controls.css  overlay-chrome.css  overlay-filters.css  palette.css  segment-control.css  tokens.css  window-chrome.css
src/routes/: +layout.svelte  +page.svelte
src/routes/dev/vertical-grid/: +page.svelte
src/routes/dev/vertical-overlay/: +page.svelte
src/routes/overlay/: +page.svelte
src/routes/palette/: +page.svelte
src/routes/settings/: +page.svelte
