[package]
name = "copyosity"
version = "0.6.4"
description = "Privacy-first clipboard history manager with NeuralDeep Hub, voice, OCR, and local Ollama"
authors = ["v.kovalskii"]
edition = "2021"

[lints.rust]
unused_must_use = "warn"

[lints.clippy]
enum_glob_use = "deny"
todo = "warn"
unimplemented = "warn"
redundant_clone = "warn"

[lib]
name = "copyosity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
# Fastest local compile (Cargo default). Dependencies stay at opt-level 2 below.
# Trade-off: local crate code runs unoptimized in dev — use [profile.release] for perf work.
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio = { version = "1", features = ["time", "sync"] }
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
ureq = { version = "2.10", features = ["json"] }
cpal = "0.16"
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc = "0.2"
cocoa = "0.26"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSApplication",
  "NSOpenPanel",
  "NSResponder",
  "NSPasteboard",
  "NSPasteboardItem",
  "NSWorkspace",
  "NSRunningApplication",
  "NSEvent",
  "NSWindow",
  "block2",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSArray",
  "NSString",
  "NSDictionary",
  "NSValue",
  "NSObject",
  "NSData",
  "NSBundle",
  "NSURL",
  "NSNotification",
  "NSOperation",
  "NSError",
  "NSObjCRuntime",
  "block2",
] }
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRecognizeTextRequest", "VNRequestHandler", "VNObservation", "VNTypes"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e89" }
