[package]
name = "copyosity"
version = "1.0.1"
description = "Privacy-first clipboard history manager with NeuralDeep Hub, voice, OCR, and local Ollama"
authors = ["v.kovalskii"]
edition = "2021"

[lints.rust]
unused_must_use = "warn"

[lints.clippy]
enum_glob_use = "deny"
todo = "warn"
unimplemented = "warn"
redundant_clone = "warn"

[lib]
name = "copyosity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
# Fastest local compile (Cargo default). Dependencies stay at opt-level 2 below.
# Trade-off: local crate code runs unoptimized in dev — use [profile.release] for perf work.
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Experimental on-device streaming ASR (sherpa-onnx streaming zipformer
# transducers via the `sherpa-transducers` crate). OFF by default so normal,
# CI, and release builds do NOT pull the native sherpa-onnx stack or bloat the
# app. Develop/verify with: `cargo check --features local-asr`. See
# src/local_asr.rs. Once proven this graduates to a bundled, code-signed backend.
local-asr = ["dep:sherpa-transducers", "dep:sherpa-rs-sys", "dep:anyhow", "tokio/rt-multi-thread", "tokio/macros"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
# On-device streaming ASR (feature `local-asr`). `static` builds the bundled
# sherpa-onnx from source (cmake) statically — keeps its C bindings and the
# linked lib the same version (avoids the struct-field skew between
# sherpa-transducers 0.5 and newer sherpa-rs-sys), needs no network at build
# (the `download-binaries` downloader panics behind this network's auth proxy),
# and is self-contained for later notarized shipping. `download-models` pulls
# streaming zipformer models from HF at runtime on first use.
# sherpa-rs-sys is pinned to =0.6.6 to match what sherpa-transducers 0.5.5 targets.
# Build/check: cargo check --features local-asr
sherpa-transducers = { version = "0.5", default-features = false, features = ["static", "download-models"], optional = true }
sherpa-rs-sys = { version = "=0.6.6", optional = true }
anyhow = { version = "1", optional = true } # error type used by sherpa-transducers
base64 = "0.22"
tokio = { version = "1", features = ["time", "sync"] }
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
ureq = { version = "2.10", features = ["json"] }
cpal = "0.16"
hound = "3.5"
tauri-plugin-autostart = "2.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc = "0.2"
cocoa = "0.26"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSApplication",
  "NSOpenPanel",
  "NSResponder",
  "NSPasteboard",
  "NSPasteboardItem",
  "NSWorkspace",
  "NSRunningApplication",
  "NSEvent",
  "NSScreen",
  "NSView",
  "NSWindow",
  "NSButton",
  "NSStatusItem",
  "NSStatusBarButton",
  "block2",
] }
# NSStatusItem / NSStatusBarButton: tray_macos highlight (docs/architecture/macos-tray-menu.md §4)
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSArray",
  "NSString",
  "NSDictionary",
  "NSValue",
  "NSObject",
  "NSData",
  "NSBundle",
  "NSURL",
  "NSNotification",
  "NSOperation",
  "NSError",
  "NSObjCRuntime",
  "block2",
] }
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRecognizeTextRequest", "VNRequestHandler", "VNObservation", "VNTypes"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e89" }

# §6 Agent guardrail: docs/architecture/macos-tray-menu.md — do not remove pin without upstream merge.
# tray-icon#318: popUpStatusItemMenu inside on_tray_click (macOS; patch applies on all targets).
[patch.crates-io]
tray-icon = { git = "https://github.com/tauri-apps/tray-icon", rev = "8cd6dce9bae905069416e524a077a3a9d7a6b451" }

# Live streaming-ASR demo (mic or WAV). Requires the local-asr feature + a
# prebuilt/static sherpa-onnx. Run:
#   cargo run --example asr_demo --features local-asr            # mic
#   cargo run --example asr_demo --features local-asr -- a.wav   # from a WAV
[[example]]
name = "asr_demo"
required-features = ["local-asr"]
